--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "start": "node ./dist/app.js",
     "dev": "nodemon app.ts",
     "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "jest"
+    "test": "jest",
+    "typeorm": "typeorm-ts-node-commonjs -d src/config/db.config.ts",
+    "migration:create": "npx typeorm-ts-node-commonjs migration:create",
+    "migration:generate": "npx typeorm-ts-node-commonjs migration:generate -d dist/src/config/db.config.js",
+    "migration:migrate": "typeorm-ts-node-commonjs -d dist/src/config/db.config.js migration:run",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d dist/src/config/db.config.js",
+    "migration:show": "typeorm-ts-node-commonjs migration:show -d dist/src/config/db.config.js"
   },
   "author": "Toheeb-Rauf",
   "license": "ISC",
@@ -24,6 +30,7 @@
     "express-jwt": "^8.4.1",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.2",
